--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1388,8 +1388,13 @@ form .formulario-espacios .form-submit:hover {
   .header-movil {
     height: 60px;
     width: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
     padding: 18px 24px;
     background-color: #09143C;
+    z-index: 999;
   }
   .header-movil svg {
     font-size: 28px;
@@ -1401,6 +1406,7 @@ form .formulario-espacios .form-submit:hover {
   .main-movil {
     display: flex;
     width: 100vw;
+    padding-top: 60px;
     overflow: hidden;
   }
   .footer-movil {
@@ -1454,15 +1460,21 @@ form .formulario-espacios .form-submit:hover {
   }
   .home {
     padding-top: 160px;
+    padding-bottom: 400px;
     justify-content: flex-start;
     align-items: flex-end;
   }
   .img-sujeto {
     height: 513px;
+    position: fixed;
+    left: 0;
+    top: 200px;
+    z-index: -1;
     margin: 0;
     transform: translateX(-100%);
   }
   .sujeto {
+    z-index: -2;
     margin-top: 0%;
   }
   .sujeto h1, .sujeto h2 {
@@ -1483,8 +1495,10 @@ form .formulario-espacios .form-submit:hover {
   .Portafolio {
     width: 100%;
     padding: 24px;
+    padding-top: 84px;
     height: -moz-fit-content;
     height: fit-content;
+    z-index: 1;
   }
   .lista-trabajos {
     padding: 24px;
@@ -1606,6 +1620,7 @@ form .formulario-espacios .form-submit:hover {
   }
   .SobreMi-Seccion {
     width: 100%;
+    padding-top: 84px;
   }
   /* ============== SobreMi - Experiencia ============== */
   .Experiencia {
@@ -1620,26 +1635,36 @@ form .formulario-espacios .form-submit:hover {
   .exp-navCont .exp-nav {
     margin: 0;
   }
+  .exp-navCont .activo::before {
+    border: 2px solid #E3DB1D;
+    border-left: none;
+    border-top: none;
+  }
+  .exp-navCont .activo::after {
+    border: 2px solid #E3DB1D;
+    border-right: none;
+    border-top: none;
+  }
   .exp-navCont .movil-border-rigth::before {
     content: "";
-    width: 5px;
+    width: 100%;
     height: 10px;
-    background-color: rgb(227, 220, 29);
+    background-color: rgba(53, 52, 32, 0.726);
     border: none;
     border-radius: 0;
     border-left: 2px solid #E3DB1D;
-    margin-left: -96%;
+    margin-left: -2%;
     margin-bottom: -90px;
   }
   .exp-navCont .movil-border-left::after {
     content: "";
-    width: 5px;
+    width: 100%;
     height: 10px;
-    background-color: rgb(227, 220, 29);
+    background-color: rgba(53, 52, 32, 0.726);
     border: none;
     border-radius: 0;
     border-right: 2px solid #E3DB1D;
-    margin-left: -66%;
+    margin-left: -160%;
     margin-bottom: -90px;
   }
   .experiencia-info {
@@ -1690,6 +1715,92 @@ form .formulario-espacios .form-submit:hover {
     padding: 8px 0 0 0;
   }
   /* ============== SobreMi - Habilidad ============== */
+  .Habilidades, .Educacion {
+    height: -moz-fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    padding-bottom: 300px;
+    justify-self: center;
+    align-items: center;
+    gap: 24px;
+  }
+  .Habilidades .habilidades-navMovil, .Educacion .habilidades-navMovil {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .Habilidades .habilidades-navMovil button, .Educacion .habilidades-navMovil button {
+    display: flex;
+    align-items: center;
+    width: 50%;
+    padding: 8px 16px;
+    color: #FFFFFF;
+    margin-bottom: 12px;
+    font-size: 20px;
+    background: var(--color-1, #09143C);
+    box-shadow: inset 0px 0px 0px 0px rgba(250, 47, 77, 0.5215686275), 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
+    border-radius: 8px;
+    border: 0;
+  }
+  .Habilidades .habilidades-navMovil button svg, .Educacion .habilidades-navMovil button svg {
+    margin-right: 24px;
+  }
+  .Habilidades .habilidades-navMovil button:active, .Educacion .habilidades-navMovil button:active {
+    background-color: #FA2F4C;
+  }
+  .Habilidades .habilidades-navMovil button:hover, .Educacion .habilidades-navMovil button:hover {
+    box-shadow: inset 0px 0px 0px 2px rgba(250, 47, 77, 0.5215686275), 0px 4px 30px 1px rgba(252, 97, 94, 0.35);
+  }
+  .Habilidades .col, .Educacion .col {
+    width: 60%;
+    position: absolute;
+    margin-top: -20px;
+  }
+  .Habilidades .col .h-cont, .Educacion .col .h-cont {
+    padding: 0 24px 12px 24px;
+  }
+  .Habilidades .col .h-cont li, .Educacion .col .h-cont li {
+    padding: 0;
+    margin: 0;
+    margin-left: 12px;
+    line-height: 24px;
+  }
+  .Habilidades .col .h-volver, .Educacion .col .h-volver {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 12px;
+  }
+  .Habilidades .col .h-volver svg, .Educacion .col .h-volver svg {
+    margin-right: 8px;
+    font-size: 20px;
+  }
+  .Habilidades .col .h-volver p, .Educacion .col .h-volver p {
+    font-size: 20px;
+  }
+  .Habilidades .col .h-volver:hover svg, .Habilidades .col .h-volver:hover p, .Habilidades .col .h-volver:active svg, .Habilidades .col .h-volver:active p, .Educacion .col .h-volver:hover svg, .Educacion .col .h-volver:hover p, .Educacion .col .h-volver:active svg, .Educacion .col .h-volver:active p {
+    color: #E3DB1D;
+  }
+  /* ============== SobreMi - Educación ============== */
+  .Educacion {
+    padding-bottom: 300px;
+  }
+  .Educacion .col {
+    top: 50%;
+    width: 90%;
+  }
+  .Educacion .col1 {
+    width: 100%;
+    position: static;
+    margin-bottom: 20px;
+  }
+  .Educacion .col1 .h-cont li {
+    line-height: 20px;
+  }
   /* ============== SobreMi - Valóres ============== */
   .Valores {
     padding: 24px;
@@ -1728,6 +1839,87 @@ form .formulario-espacios .form-submit:hover {
     display: none;
   }
   /* ############# Contenido Principal - Servicios ############# */
+  .servicios {
+    padding: 24px;
+    padding-top: 84px;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  .servicios .servicios-list {
+    height: -moz-fit-content;
+    height: fit-content;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 24px;
+  }
+  .servicios .servicios-list .servicio-cont {
+    flex-direction: row;
+    height: -moz-fit-content;
+    height: fit-content;
+    width: 90%;
+    margin-left: 10%;
+    margin-bottom: 0;
+  }
+  .servicios .servicios-list .servicio-cont img {
+    margin-left: -58px;
+    margin-bottom: -60px;
+  }
+  .servicios .servicios-list .servicio-cont .servicio-cont-desc {
+    padding-bottom: 12px;
+  }
+  .servicios .servicios-list .servicio-cont .servicio-cont-desc p {
+    text-align: start;
+    margin-bottom: 8px;
+    padding: 0 0 0 24px;
+  }
+  .servicios .callToAction p {
+    display: none;
+  }
+  /* ############# Contenido Principal - Referencias ############# */
+  .referecias {
+    height: -moz-fit-content;
+    height: fit-content;
+    padding: 24px;
+    padding-top: 84px;
+  }
+  .referencias-desc {
+    padding-top: 12px;
+    height: 300px;
+  }
+  .referencias-list {
+    width: 250%;
+    margin-left: 27%;
+    margin-right: 30%;
+  }
+  .referencias-list div {
+    background-color: #D9D9D9;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    opacity: 0.6;
+    cursor: pointer;
+  }
+  .referencias-list div img {
+    width: 100%;
+  }
+  .referencias-list .activo {
+    cursor: default;
+    width: 180px;
+    height: 180px;
+    opacity: 1;
+  }
+  form {
+    flex-direction: column;
+  }
+  form .formulario-espacios {
+    flex-direction: column;
+    width: 100%;
+  }
+  form .formulario-espacios .form-submit {
+    margin-left: 35%;
+  }
+  /* ############# Clases Comunes ############# */
   .displayNone {
     display: none;
   }
