--- a/src/app/style.scss
+++ b/src/app/style.scss
@@ -1439,8 +1439,13 @@ form {
 .header-movil {
     height: 60px;
     width: 100%;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
     padding: 18px 24px;
     background-color: $Color1;
+    z-index: 999;
     
     svg {
         font-size: 28px;
@@ -1453,6 +1458,7 @@ form {
 .main-movil {
     display: flex;
     width: 100vw;
+    padding-top: 60px;
     overflow: hidden;
 }
 
@@ -1511,17 +1517,23 @@ form {
 
 .home {
     padding-top: 160px;
+    padding-bottom: 400px;
     justify-content: flex-start;
     align-items: flex-end;
 }
 
 .img-sujeto {
     height: 513px;
+    position: fixed;
+    left: 0;
+    top: 200px;
+    z-index: -1;
     margin: 0;
     transform: translateX(-100%);
 }
 
 .sujeto {
+    z-index: -2;
     margin-top: 0%;
     h1, h2 {
         margin: 0;
@@ -1543,7 +1555,9 @@ form {
 .Portafolio {
     width: 100%;
     padding: 24px;
+    padding-top: 84px;
     height: fit-content;
+    z-index: 1;
 }
 
 .lista-trabajos {
@@ -1663,9 +1677,12 @@ form {
 
 .SobreMi-Seccion {
     width: 100%;
+    padding-top: 84px;
 }
 /* ============== SobreMi - Experiencia ============== */
-.Experiencia {height: fit-content;}
+.Experiencia {
+    height: fit-content;
+}
 
 .exp-navCont {
     width: 100%;
@@ -1674,26 +1691,36 @@ form {
     .exp-nav {
         margin: 0;
     }
+    .activo::before {
+        border: 2px solid $Color4;
+        border-left: none;
+        border-top: none;
+    }
+    .activo::after {
+        border: 2px solid $Color4;
+        border-right: none;
+        border-top: none;
+    }
     .movil-border-rigth::before {
         content: '';
-        width: 5px;
+        width: 100%;
         height: 10px;
-        background-color:rgb(227, 220, 29);
+        background-color:rgba(53, 52, 32, 0.726);
         border: none;
         border-radius: 0;
         border-left: 2px solid $Color4;;
-        margin-left: -96%;
+        margin-left: -2%;
         margin-bottom: -90px;
     }
     .movil-border-left::after {
         content: '';
-        width: 5px;
+        width: 100%;
         height: 10px;
-        background-color:rgb(227, 220, 29);
+        background-color:rgba(53, 52, 32, 0.726);
         border: none;
         border-radius: 0;
         border-right: 2px solid $Color4;;
-        margin-left: -66%;
+        margin-left: -160%;
         margin-bottom: -90px;
     }
 }
@@ -1745,7 +1772,95 @@ form {
     }
 }
 /* ============== SobreMi - Habilidad ============== */
+.Habilidades, .Educacion {
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    padding-bottom: 300px;
+    justify-self: center;
+    align-items: center;
+    gap: 24px;
 
+    .habilidades-navMovil {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        button {
+            display: flex;
+            align-items: center;
+            width: 50%;
+            padding: 8px 16px;
+            color: $Color2;
+            margin-bottom: 12px;
+            font-size: 20px;
+            background: var(--color-1, #09143C);
+            box-shadow: inset 0px 0px 0px 0px #fa2f4d85, 0px 4px 15px 0px rgba(252, 97, 94, 0.35);
+            border-radius: 8px;
+            border: 0;
+            svg {
+                margin-right: 24px;
+            }
+            &:active {
+                background-color: $Color3;
+            }
+            &:hover {
+                box-shadow: inset 0px 0px 0px 2px #fa2f4d85, 0px 4px 30px 1px rgba(252, 97, 94, 0.35);
+            }
+        }
+    }
+
+    .col {
+        width: 60%;
+        position: absolute;
+        margin-top: -20px;
+        .h-cont {
+            padding: 0 24px 12px 24px;
+            li {
+                padding: 0;
+                margin: 0;
+                margin-left: 12px;
+                line-height: 24px;
+            }
+        }
+        .h-volver {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-bottom: 12px;
+            svg {
+                margin-right: 8px;
+                font-size: 20px;
+            }
+            p {font-size: 20px;}
+            &:hover, &:active {
+               svg, p {color: $Color4;}
+            }
+        }
+    }
+}
+
+/* ============== SobreMi - Educación ============== */
+.Educacion {
+    padding-bottom: 300px;
+
+    .col {
+        top: 50%;
+        width: 90%;
+    }
+    .col1 {
+        width: 100%;
+        position: static;
+        margin-bottom: 20px;
+        .h-cont li {
+            line-height: 20px;
+        }
+    }
+
+
+}
 
 /* ============== SobreMi - Valóres ============== */
 .Valores {
@@ -1786,9 +1901,90 @@ form {
 }
  
 /* ############# Contenido Principal - Servicios ############# */
-.displayNone {
-    display: none;
+.servicios {
+    padding: 24px;
+    padding-top: 84px;
+    height: fit-content;
+    .servicios-list {
+        height: fit-content;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 24px;
+        .servicio-cont {
+            flex-direction: row;
+            height: fit-content;
+            width: 90%;
+            margin-left: 10%;
+            margin-bottom: 0;
+            img {
+                margin-left: -58px;
+                margin-bottom: -60px;
+            }
+            .servicio-cont-desc {
+                padding-bottom: 12px;
+                p {
+                    text-align: start;
+                    margin-bottom: 8px;
+                    padding: 0 0 0 24px;
+                }
+            }
+        }
+    }
+    .callToAction {
+        p {display: none;}
+    }
 }
+
+/* ############# Contenido Principal - Referencias ############# */
+.referecias {
+    height: fit-content;
+    padding: 24px;  
+    padding-top: 84px;
+}
+
+.referencias-desc {
+    padding-top: 12px;
+    height: 300px;
+}
+
+.referencias-list {
+    width: 250%;
+    margin-left: 27%;
+    margin-right: 30%;
+    div {
+        background-color: $Color6;
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        opacity: 0.6;
+        cursor: pointer;
+        img {width: 100%;}
+    }
+    .activo {
+        cursor: default;
+        width: 180px;
+        height: 180px;
+        opacity: 1;
+    }
+}
+
+form {
+    flex-direction: column;
+    .formulario-espacios {
+        flex-direction: column;
+        width: 100%;
+        .form-submit {
+            margin-left: 35%;
+        }
+    }
+}
+
+
+/* ############# Clases Comunes ############# */
+    .displayNone {
+        display: none;
+    }
 
 }
 
